--- a/Fuente/styles/sass/utils/_variables.scss
+++ b/Fuente/styles/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
 // Variables para estilos Globales
 
 // Estilo de letras para las fuentes
-$font-Main: typography.$Lato;
+$font-Main: 'Lato';
 $font-Secondary: 'Questrial';
 
 // Paleta de colores para la web
