--- a/Fuente/styles/sass/base/_typography.scss
+++ b/Fuente/styles/sass/base/_typography.scss
@@ -2,7 +2,6 @@
 @use '../utils/variables';
 
 // Fuentes que voy a usar en mi proyecto web
-
 @font-face {
     font-family: 'Lato';
     src: url(../../../media/fonts/Lato-Regular.ttf);
@@ -18,28 +17,37 @@ $font-size: 2rem;
 $line-height: 1.6;
 
 body {
-    font-family: $font-Secondary;
-    font-size: $font-size / 2;
+    font-family: variables.$font-Secondary;
+    font-size: calc($font-size / 2);
     line-height: $line-height;
 }
 
 h1 {
-    font-family: $font-Main;
+    font-family: variables.$font-Main;
     font-size: $font-size * 2.4;
-    color: $color-Neutro-Blanco;
+    color: variables.$color-Neutro-Blanco;
     line-height: $line-height - 0.4;
 }
 
 h2 {
-    font-family: $font-Main;
+    font-family: variables.$font-Main;
     font-size: $font-size * 1.75;
-    color: $color-Secundario;
+    font-style: italic;
+    color: variables.$color-Secundario;
     line-height: $line-height - 0.4;
 }
 
 h3 {
-    font-family: $font-Secondary;
+    font-family: variables.$font-Secondary;
     font-size: $font-size;
-    color: $color-Neutro-Negro;
+    color: variables.$color-Neutro-Negro;
     line-height: $line-height - 0.4;
+}
+p {
+    font-family: variables.$font-Secondary;
+    font-size: $font-size - 0.75;
+    color: variables.$color-Neutro-Negro;
+    text-align: justify;
+    font-size: $font-size - 0.75;
+    text-indent: $font-size;
 }
