--- a/Fuente/styles/sass/base/_typography.scss
+++ b/Fuente/styles/sass/base/_typography.scss
@@ -4,12 +4,12 @@
 // Fuentes que voy a usar en mi proyecto web
 @font-face {
     font-family: 'Lato';
-    src: url(../../../media/fonts/Lato-Regular.ttf);
+    src: url(../../media/fonts/Lato-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Questrial';
-    src: url(../../../media/fonts/Questrial-Regular.ttf);
+    src: url(../../media/fonts/Questrial-Regular.ttf);
 }
 
 // Variable usada para el tamaño de las fuentes y el interlineado
