--- a/Fuente/styles/css/main.css
+++ b/Fuente/styles/css/main.css
@@ -1,23 +1,3 @@
-body {
-  background-color: #F1E7E7;
-  padding-top: 10rem;
-}
-
-a {
-  text-decoration: none;
-  font-family: "Lato";
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-  color: #F1E7E7;
-  font-size: 1.5rem;
-  display: inline-block;
-  padding: 1.25rem;
-}
-a:hover {
-  color: #F1A2A2;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -25,16 +5,15 @@ a:hover {
   text-decoration: none;
   border: none;
   outline: none;
-  font-size: 100%;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url(../../../media/fonts/Lato-Regular.ttf);
+  src: url(../../media/fonts/Lato-Regular.ttf);
 }
 @font-face {
   font-family: "Questrial";
-  src: url(../../../media/fonts/Questrial-Regular.ttf);
+  src: url(../../media/fonts/Questrial-Regular.ttf);
 }
 body {
   font-family: "Questrial";
@@ -71,6 +50,71 @@ p {
   text-align: justify;
   font-size: 1.25rem;
   text-indent: 2rem;
+}
+
+body {
+  background-color: #F1E7E7;
+  padding-top: 10rem;
+}
+
+a {
+  text-decoration: none;
+  font-family: "Lato";
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: #F1E7E7;
+  font-size: 1.5rem;
+  display: inline-block;
+  padding: 1.25rem;
+}
+a:hover {
+  color: #F1A2A2;
+}
+
+/* Boton de Iniciar Sesion */
+.boton-inicio {
+  background-color: #B03B3B;
+  border: 2px solid #F1E7E7;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 5px 5px rgba(34, 34, 34, 0.5);
+  transition: all 0.25s ease;
+}
+.boton-inicio:hover {
+  background-color: #362624;
+  transition: all 0.25s;
+}
+
+/* Boton Predeterminado */
+.boton-pred {
+  background-color: #961316;
+  border: 2px solid #F1E7E7;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 5px 5px rgba(34, 34, 34, 0.5);
+  transition: all 0.25s ease;
+}
+.boton-pred:hover {
+  background-color: #362624;
+  transition: all 0.25s;
+}
+
+/* Boton Footer */
+.boton-footer {
+  background-color: #961316;
+  border: 2px solid #F1E7E7;
+  border-radius: 1rem;
+  box-shadow: none;
+  transition: all 0.25s ease;
+  padding: 0.75rem;
+  border-radius: 0.5rem;
+}
+.boton-footer:hover {
+  background-color: #F1E7E7;
+  transition: all 0.25s;
+}
+.boton-footer:hover {
+  color: #222222;
+  border: 2px solid #961316;
 }
 
 /*# sourceMappingURL=main.css.map */
