--- a/Fuente/styles/sass/main.scss
+++ b/Fuente/styles/sass/main.scss
@@ -1,5 +1,7 @@
 @use 'utils/variables';
 
-@use 'base/base';
 @use 'base/reset';
 @use 'base/typography';
+@use 'base/base';
+
+@use 'components/buttons'
