--- a/Fuente/styles/css/main.css
+++ b/Fuente/styles/css/main.css
@@ -117,4 +117,34 @@ a:hover {
   border: 2px solid #961316;
 }
 
+header {
+  background-color: #961316;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  min-height: 10rem;
+  z-index: 5;
+  box-shadow: 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+}
+header .menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10rem;
+}
+header .menu .enlaces ul {
+  display: flex;
+  list-style: none;
+}
+header .menu .enlaces ul a {
+  font-size: 1.5rem;
+  padding: 1.25rem;
+}
+header .menu .enlaces ul a:hover {
+  color: #F1A2A2;
+}
+header .menu .separado {
+  margin-right: 5rem;
+}
+
 /*# sourceMappingURL=main.css.map */
