--- a/Fuente/styles/sass/base/_typography.scss
+++ b/Fuente/styles/sass/base/_typography.scss
@@ -40,7 +40,7 @@ h2 {
 h3 {
     font-family: variables.$font-Secondary;
     font-size: $font-size;
-    color: variables.$color-Neutro-Negro;
+    color: variables.$color-Neutro-Blanco;
     line-height: $line-height - 0.4;
 }
 p {
