--- a/Fuente/styles/css/main.css
+++ b/Fuente/styles/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -39,7 +40,7 @@ h2 {
 h3 {
   font-family: "Questrial";
   font-size: 2rem;
-  color: #222222;
+  color: #F1E7E7;
   line-height: 1.2;
 }
 
@@ -106,7 +107,6 @@ a:hover {
   box-shadow: none;
   transition: all 0.25s ease;
   padding: 0.75rem;
-  border-radius: 0.5rem;
 }
 .boton-footer:hover {
   background-color: #F1E7E7;
@@ -125,6 +125,20 @@ header {
   min-height: 10rem;
   z-index: 5;
   box-shadow: 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+}
+header .img-logoHeader {
+  width: 9rem;
+  height: 9rem;
+  margin: 0.5rem 0 0.5rem 5rem;
+}
+header .img-logoHeader:hover {
+  width: 8.75rem;
+  height: 8.75rem;
+  margin-right: 0.25rem;
+  transition: all 0.5s;
+}
+header .img-logoHeader:active {
+  transform: scale(0.9) skew(-2deg);
 }
 header .menu {
   display: flex;
@@ -145,6 +159,221 @@ header .menu .enlaces ul a:hover {
 }
 header .menu .separado {
   margin-right: 5rem;
+}
+
+footer {
+  background-color: #362624;
+  box-shadow: 0 -5px 5px 0 rgba(34, 34, 34, 0.5);
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+footer .fila-superior {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+}
+footer .fila-superior .img-logoFooter {
+  width: 9rem;
+  height: 9rem;
+  justify-self: start;
+}
+footer .fila-superior .img-logoPatrocinador {
+  width: 10rem;
+  height: 10rem;
+  justify-self: center;
+}
+footer .fila-superior .cta-redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+footer .fila-superior .cta-redes .img-redes {
+  display: flex;
+  gap: 1rem;
+}
+footer .fila-superior .cta-redes .img-redes .img-logoRedes {
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  background-color: #961316;
+  box-shadow: 0 0 0 0.2rem #F1A2A2;
+  border-radius: 1.75rem;
+}
+footer .fila-inferior {
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 0.5rem;
+}
+footer .fila-inferior .menu-footer ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  gap: 1.5rem;
+}
+footer .fila-inferior .menu-footer ul a {
+  font-weight: normal;
+  font-size: 1rem;
+  text-transform: none;
+  text-align: center;
+  color: #F1E7E7;
+  display: inline-block;
+  padding: 0;
+}
+footer .fila-inferior .menu-footer ul a:hover {
+  color: #F1A2A2;
+}
+footer .fila-inferior .copy {
+  color: #F1E7E7;
+  opacity: 60%;
+}
+
+.introduccion {
+  position: relative;
+  width: 100%;
+  height: 32rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+}
+.introduccion .intro-texto {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  color: #F1E7E7;
+}
+.introduccion .intro-botones {
+  position: relative;
+  z-index: 1;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+  width: 55%;
+}
+
+.img-pred {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+  filter: brightness(0.75) contrast(120%) saturate(110%) sepia(25%);
+}
+
+/*
+    Creo un Mixin que recibe 3 parametros:
+        - El nombre del directorio al que me refiero.
+        - El nombre del fichero que estoy buscando.
+        - Los formatos en los que voy a querer la imagen.
+        - Las resoluciones que estan la imagenes.
+
+    Con cada @each itero sobre cada formato y resolucion (Como un for).
+
+    Genero una regla @media para añadir las imagenes en funcion de la resolucion.
+*/
+@media (min-width: 320px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-320px.avif");
+  }
+}
+@media (min-width: 320px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-320px.webp");
+  }
+}
+@media (min-width: 320px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-320px.jpg");
+  }
+}
+@media (min-width: 640px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-640px.avif");
+  }
+}
+@media (min-width: 640px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-640px.webp");
+  }
+}
+@media (min-width: 640px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-640px.jpg");
+  }
+}
+@media (min-width: 960px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-960px.avif");
+  }
+}
+@media (min-width: 960px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-960px.webp");
+  }
+}
+@media (min-width: 960px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-960px.jpg");
+  }
+}
+@media (min-width: 1600px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-1600px.avif");
+  }
+}
+@media (min-width: 1600px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-1600px.webp");
+  }
+}
+@media (min-width: 1600px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-1600px.jpg");
+  }
+}
+@media (min-width: 2240px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-2240px.avif");
+  }
+}
+@media (min-width: 2240px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-2240px.webp");
+  }
+}
+@media (min-width: 2240px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-2240px.jpg");
+  }
+}
+@media (min-width: 3200px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-3200px.avif");
+  }
+}
+@media (min-width: 3200px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-3200px.webp");
+  }
+}
+@media (min-width: 3200px) {
+  .img-index {
+    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-3200px.jpg");
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
