--- a/Fuente/styles/css/todo.css
+++ b/Fuente/styles/css/todo.css
@@ -216,19 +216,21 @@ a:hover{
     box-shadow: 0 10px 5px 0 var(--color-Neutro-Negro-rgba);
 }
 
-    /* Alieno el texto al centro */
-.img-header{
+/* Alieno el texto al centro */
+.img-header-pred{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../../media/img/hero-image/webp/hero-PaginaPrincipal-3200px.webp);
     background-size: cover;
     background-position: center;
     z-index: 0;
-
+    
     filter: brightness(0.75) contrast(120%) saturate(110%) sepia(25%);  
+}
+.img-index {
+    background-image: url(../../media/img/hero-image/webp/hero-PaginaPrincipal-3200px.webp);
 }
 
 .intro-texto{
@@ -255,58 +257,32 @@ a:hover{
     margin: 2.5rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
+    gap: 2.5rem;
     text-align: right;
+    align-items: center;
 }
 /* Modifico el h2 para que se ponga a la derecha */
 .contenido h2{
     text-align: left;
+    margin-bottom: 1.5rem;
 }
 /* Le indico unos margenes superiores para que se se centre el texto y el boton */
 .cont-texto{
     margin-top: 1.5rem;
 }
 .cont-texto a{
-    margin-top: 2rem;
+    margin-top: 4.5rem;
 }
-/* Como en el apartado anterior le indico una imagen, tamaño y posicion */
-.cont-img{
-    position: relative;
-    z-index: 1;
 
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
-
+.img-deco-index {
+    display: block;
+    width: 100%;
+    height: auto;
+    
     box-shadow: 0px 0px 5px 5px var(--color-Neutro-Negro-rgba);
     border: 2px solid var(--color-Principal);
-    border-radius: 1rem;
-}
-
-.img-deco{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipal.svg);
-    background-size: cover;
-    background-position: center;
-    z-index: 0;
-    border-radius: 0.85rem;
-
-    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
-}
-
-.cita{
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    color: var(--color-Neutro-Blanco);
-    font-weight: bolder;
-    font-style: italic;
-    text-shadow: 2px 2px 2px var(--color-Principal); /* Le añado una sombra al texto para que se vea mejor*/
+    border-radius: 1rem;    
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
 }
 
 /* ANUNCIO - Index */
@@ -367,19 +343,19 @@ a:hover{
     background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-1.svg);
     background-size: cover;
     background-position: center;
-    filter: brightness(0.75) contrast(120%) saturate(120%) sepia(15%);  
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
 }
 .redes-img picture:nth-child(2){
     background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-2.svg);
     background-size: cover;
     background-position: center;
-    filter: brightness(0.75) contrast(120%) saturate(120%) sepia(15%);  
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
 }
 .redes-img picture:last-child{
     background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-3.svg);
     background-size: cover;
     background-position: center;
-    filter: brightness(0.75) contrast(120%) saturate(120%) sepia(15%);  
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
 }
 /* Resalto la imagen cuando pongo el raton encima */
 .redes-img picture:hover{
