--- a/Fuente/styles/css/todo copy.css
+++ b/Fuente/styles/css/todo copy.css
@@ -237,3 +237,23 @@
     font-style: italic;
     text-shadow: 2px 2px 2px var(--color-Principal); /* Le añado una sombra al texto para que se vea mejor*/
 }
+
+/* Le asigno imagenes a cada articulo de las redes sociales */
+.redes-img picture:nth-child(1){
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-1.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+.redes-img picture:nth-child(2){
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-2.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+.redes-img picture:last-child{
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-3.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
