--- a/Fuente/styles/css/main.css
+++ b/Fuente/styles/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -262,7 +261,7 @@ footer .fila-inferior .copy {
   width: 55%;
 }
 
-.img-pred {
+.img-header-pred {
   position: absolute;
   top: 0;
   left: 0;
@@ -274,17 +273,6 @@ footer .fila-inferior .copy {
   filter: brightness(0.75) contrast(120%) saturate(110%) sepia(25%);
 }
 
-/*
-    Creo un Mixin que recibe 3 parametros:
-        - El nombre del directorio al que me refiero.
-        - El nombre del fichero que estoy buscando.
-        - Los formatos en los que voy a querer la imagen.
-        - Las resoluciones que estan la imagenes.
-
-    Con cada @each itero sobre cada formato y resolucion (Como un for).
-
-    Genero una regla @media para añadir las imagenes en funcion de la resolucion.
-*/
 @media (min-width: 320px) {
   .img-index {
     background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-320px.avif");
@@ -374,6 +362,99 @@ footer .fila-inferior .copy {
   .img-index {
     background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-3200px.jpg");
   }
+}
+
+.contenido {
+  width: 75%;
+  margin: 2.5rem auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2.5rem;
+  text-align: right;
+  align-items: center;
+}
+.contenido h2 {
+  text-align: left;
+  margin-bottom: 1.5rem;
+}
+.contenido .cont-texto {
+  margin-top: 1.5rem;
+}
+.contenido .cont-texto a {
+  margin-top: 2rem;
+}
+.contenido .img-deco-index {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  box-shadow: 0px 0px 5px 5px rgba(34, 34, 34, 0.5);
+  border: 2px solid #961316;
+  border-radius: 1rem;
+  filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);
+}
+
+.anuncio {
+  width: 75%;
+  margin: auto auto 2.5rem;
+  padding: 1.5rem;
+  background-color: #F1A2A2;
+  border-radius: 1rem;
+  border: 2px solid #B03B3B;
+}
+.anuncio .anuncio-texto {
+  text-align: center;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  text-indent: 0;
+  color: #961316;
+}
+
+.redes {
+  width: 75%;
+  margin: auto auto 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+.redes .redes-img {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+}
+.redes .redes-img .img-deco-index-redes {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1/1;
+  border: 4px solid #961316;
+  border-radius: 1rem;
+  overflow: hidden;
+  transition: all 0.5s;
+  filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);
+}
+.redes .redes-img .img-deco-index-redes .img-main {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.redes .redes-img .img-deco-index-redes:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  filter: brightness(0.8);
+  transition: all 0.5s;
+}
+.redes .redes-img .img-deco-index-redes .img-Instagram {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #B03B3B;
+  border: 3px solid #222222;
+  border-radius: 0.5rem;
+  z-index: 10;
 }
 
 /*# sourceMappingURL=main.css.map */
