--- a/Fuente/styles/css/todo copy.css
+++ b/Fuente/styles/css/todo copy.css
@@ -1,199 +1,3 @@
-/* CONTENIDO - Index */
-/* Le indico el espacio que va a ocupar, el margen que le quiero dar, y hago que el
-    contenido de dentro se disponga de forma horizontal */
-.contenido{
-    width: 75%;
-    margin: 2.5rem auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
-    text-align: right;
-}
-/* Modifico el h2 para que se ponga a la derecha */
-.contenido h2{
-    text-align: left;
-}
-/* Le indico unos margenes superiores para que se se centre el texto y el boton */
-.cont-texto{
-    margin-top: 1.5rem;
-}
-.cont-texto a{
-    margin-top: 2rem;
-}
-/* Como en el apartado anterior le indico una imagen, tamaño y posicion */
-.cont-img{
-    position: relative;
-    z-index: 1;
-
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
-
-    box-shadow: 0px 0px 5px 5px var(--color-Neutro-Negro-rgba);
-    border: 2px solid var(--color-Principal);
-    border-radius: 1rem;
-}
-
-.img-deco-pred{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    z-index: 0;
-    border-radius: 0.85rem;
-    
-    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
-}
-.img-index-deco-1 {
-    background-image: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipal.svg);
-}
-
-.cita{
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    color: var(--color-Neutro-Blanco);
-    font-weight: bolder;
-    font-style: italic;
-    text-shadow: 2px 2px 2px var(--color-Principal); /* Le añado una sombra al texto para que se vea mejor*/
-}
-
-/* ANUNCIO - Index */
-/* Le doy un tamaño, el margen que sea automatico, un color de fondo generado en "https://cssgradient.io/"
-    redondeo los bordes y le doy un borde*/
-.anuncio{
-    width: 75%;
-    margin: auto auto 2.5rem;
-    padding: 1.5rem;
-    background-color: var(--color-Secundario-Light);
-    /* background: linear-gradient(90deg, rgba(150,19,22,1) 0%, rgba(241,231,231,1) 50%, rgba(150,19,22,1) 100%); */
-    border-radius: 1rem;
-    border: 2px solid var(--color-Secundario);
-}
-/* Modifico el aspecto del contenido del anuncio*/
-.anuncio-texto{
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.5rem;
-    text-indent: 0;
-    color: var(--color-Principal);
-}
-
-/* REDES - Index */
-/* Le doy una disposicion a la seccion de redes */
-.redes{
-    width: 75%;
-    margin: auto auto 2.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-}
-/* Modifico la disposicion de las imagenes añadiendo un espacio con grid */
-.redes-img{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-}
-/* Le asigno un estilo al contendor de los articulos de las imagenes de las redes sociales*/
-.redes-img picture{
-    position: relative;
-    width: 25rem;
-    max-width: 30rem;
-    height: 20rem;
-
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: flex-end;
-
-    border: 4px solid var(--color-Principal);
-    border-radius: 1rem;
-}
-/* Le asigno imagenes a cada articulo de las redes sociales */
-.redes-img picture:nth-child(1){
-    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-1.svg);
-    background-size: cover;
-    background-position: center;
-    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
-}
-.redes-img picture:nth-child(2){
-    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-2.svg);
-    background-size: cover;
-    background-position: center;
-    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
-}
-.redes-img picture:last-child{
-    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-3.svg);
-    background-size: cover;
-    background-position: center;
-    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
-}
-/* Resalto la imagen cuando pongo el raton encima */
-.redes-img picture:hover{
-    cursor: pointer;
-    transform: scale(1.05);
-    filter: brightness(0.80);
-    transition: all 0.5s;
-}
-/* Modifco la imagen del logo de instagram de las redes sociales */
-.insta-img{
-    width: 3rem;
-    height: 3rem;
-    margin: 0.5rem;
-    background-color: var(--color-Secundario);
-    border: 3px solid var(--color-Neutro-Negro);
-    border-radius: 0.5rem;
-}
-
-/* MEDIA QUERIES */
-@media (max-width: 1520px){
-    /* Modificar el estilo del apartado de redes sociales del main*/
-    .redes-img article:last-child{
-        display: none;
-    }
-    .redes-img{
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media (max-width: 1335px){
-    /* Modifico el estilo del boton saber mas del main */
-    .cont-texto a{
-        margin-top: 1rem;
-    }
-    /* Modifico la disposion del footer */
-    .pie-pagina{
-        width: 95%;
-    }
-}
-
-@media (max-width: 1277px){
-    /* Modifico el estilo del tamaño de los enlaces del menu*/
-    a{
-        font-size: 1.25rem;
-        padding: 1rem;
-    }
-    .logo-img{
-        margin: 0.5rem 0 0.5rem 2.5rem;
-    }
-    .separado{
-        margin-right: 2.5rem;
-    }
-}
-
-@media (max-width: 1038px){
-    /* Modifico el estilo del tamaño de los enlaces del menu*/
-    h2{
-        font-size: 2.5rem;
-    }
-}
-
 /* Eliminado */
 
 /* Como en el apartado anterior le indico una imagen, tamaño y posicion */
@@ -257,3 +61,13 @@
     background-position: center;
     filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
 }
+
+.img-deco-index-redes{
+    background: url(../../media/img/ico-redes-sociales/svg/logo-Instagram.svg);
+    width: 3rem;
+    height: 3rem;
+    margin: 0.5rem;
+    background-color: var(--color-Secundario);
+    border: 3px solid var(--color-Neutro-Negro);
+    border-radius: 0.5rem;
+} 
