--- a/Fuente/styles/css/todo.css
+++ b/Fuente/styles/css/todo.css
@@ -278,6 +278,7 @@ a:hover{
     display: block;
     width: 100%;
     height: auto;
+    object-fit: cover;
     
     box-shadow: 0px 0px 5px 5px var(--color-Neutro-Negro-rgba);
     border: 2px solid var(--color-Principal);
@@ -321,39 +322,44 @@ a:hover{
 .redes-img{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 /* Le asigno un estilo al contendor de los articulos de las imagenes de las redes sociales*/
 .img-deco-index-redes{
     position: relative;
-    width: 25rem;
-    max-width: 30rem;
-    height: 20rem;
-
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: flex-end;
-
+    width: 100%;
+    aspect-ratio: 1/1;
     border: 4px solid var(--color-Principal);
     border-radius: 1rem;
+    overflow: hidden;
+    transition: all 0.5s;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
+}
+
+.img-deco-index-redes .img-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Resalto la imagen cuando pongo el raton encima */
-.redes-img picture:hover{
+.img-deco-index-redes:hover{
     cursor: pointer;
     transform: scale(1.05);
     filter: brightness(0.80);
     transition: all 0.5s;
 }
 /* Modifco la imagen del logo de instagram de las redes sociales */
-.insta-img{
+.img-Instagram {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
     width: 3rem;
     height: 3rem;
-    margin: 0.5rem;
     background-color: var(--color-Secundario);
     border: 3px solid var(--color-Neutro-Negro);
     border-radius: 0.5rem;
+    z-index: 10;
 }
 
 /* FOOTER */
@@ -489,3 +495,77 @@ footer{
         font-size: 2.5rem;
     }
 }
+
+/* Eliminado */
+
+/* Como en el apartado anterior le indico una imagen, tamaño y posicion */
+/* .cont-img{
+    position: relative;
+    z-index: 1;
+
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+
+    box-shadow: 0px 0px 5px 5px var(--color-Neutro-Negro-rgba);
+    border: 2px solid var(--color-Principal);
+    border-radius: 1rem;
+} */
+
+/* .img-deco-pred{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    border-radius: 0.85rem;
+    
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+.img-deco-index-1 {
+    background-image: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipal.svg);
+} */
+
+/* .cita{
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: var(--color-Neutro-Blanco);
+    font-weight: bolder;
+    font-style: italic; 
+    text-shadow: 2px 2px 2px var(--color-Principal); Le añado una sombra al texto para que se vea mejor
+} */
+
+/* Le asigno imagenes a cada articulo de las redes sociales */
+/* .redes-img picture:nth-child(1){
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-1.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+.redes-img picture:nth-child(2){
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-2.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+.redes-img picture:last-child{
+    background: url(../../media/img/img-decorativa/svg/decorativa-PaginaPrincipa-RS-3.svg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%);  
+}
+
+.img-deco-index-redes{
+    background: url(../../media/img/ico-redes-sociales/svg/logo-Instagram.svg);
+    width: 3rem;
+    height: 3rem;
+    margin: 0.5rem;
+    background-color: var(--color-Secundario);
+    border: 3px solid var(--color-Neutro-Negro);
+    border-radius: 0.5rem;
+}  */
