--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -7,11 +7,13 @@
     margin: 2.5rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
+    gap: 2.5rem;
     text-align: right;
+    align-items: center;
 
     h2 {
         text-align: left;
+        margin-bottom: 1.5rem;
     }
 
     .cont-texto {
@@ -22,27 +24,84 @@
         }
     }
 
-    .cont-img {
-        position: relative;
-        z-index: 1;
-
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-        align-items: center;
-
-        box-shadow: 0 0 5px 5px variables.$color-Neutro-Negro-rgba;
+    .img-deco-index {
+        display: block;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+            
+        box-shadow: 0px 0px 5px 5px variables.$color-Neutro-Negro-rgba;
         border: 2px solid variables.$color-Principal;
-        border-radius: 1rem;
+        border-radius: 1rem;    
+        filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
+    }
+}
 
-        .cita {
+.anuncio {
+    width: 75%;
+    margin: auto auto 2.5rem;
+    padding: 1.5rem;
+    background-color: variables.$color-Terciario;
+    border-radius: 1rem;
+    border: 2px solid variables.$color-Secundario;
+
+    .anuncio-texto {
+        text-align: center;
+        font-weight: bolder;
+        font-size: 1.5rem;
+        text-indent: 0;
+        color: variables.$color-Principal;
+    }
+}
+
+.redes {
+    width: 75%;
+    margin: auto auto 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+
+    .redes-img {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1.5rem;
+
+        .img-deco-index-redes {
             position: relative;
-            z-index: 1;
-            text-align: center;
-            font-weight: bolder;
-            font-style: italic;
-            text-shadow: 2px 2px 2px variables.$color-Principal;
+            width: 100%;
+            aspect-ratio: 1/1;
+            border: 4px solid variables.$color-Principal;
+            border-radius: 1rem;
+            overflow: hidden;
+            transition: all 0.5s;
+            filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
+
+            .img-main {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.05);
+                filter: brightness(0.80);
+                transition: all 0.5s;
+            }
+
+            .img-Instagram {
+                position: absolute;
+                bottom: 1rem;
+                right: 1rem;
+                width: 3rem;
+                height: 3rem;
+                background-color: variables.$color-Secundario;
+                border: 3px solid variables.$color-Neutro-Negro;
+                border-radius: 0.5rem;
+                z-index: 10;
+            }
         }
     }
-
 }
