--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -97,9 +97,10 @@
                 right: 1rem;
                 width: 3rem;
                 height: 3rem;
+                padding: 0.25rem;
                 background-color: variables.$color-Secundario;
                 border: 3px solid variables.$color-Neutro-Negro;
-                border-radius: 0.5rem;
+                border-radius: 1rem;
                 z-index: 10;
             }
         }
