--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2.5rem;
-    text-align: right;
+    text-align: left;
     align-items: center;
 
     h2 {
