--- a/Fuente/styles/css/index.css
+++ b/Fuente/styles/css/index.css
@@ -15,17 +15,21 @@
   font-family: "Questrial";
   src: url(../../media/fonts/Questrial-Regular.ttf);
 }
-body {
-  font-family: "Questrial";
-  font-size: 1rem;
-  line-height: 1.6;
-}
-
 h1 {
   font-family: "Lato";
   font-size: 4.8rem;
   color: #F1E7E7;
   line-height: 1.2;
+}
+@media (min-width: 320px) {
+  h1 {
+    font-size: 3.8rem;
+  }
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 4.8rem;
+  }
 }
 
 h2 {
@@ -35,12 +39,38 @@ h2 {
   color: #B03B3B;
   line-height: 1.2;
 }
+@media (min-width: 320px) {
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+  }
+}
+@media (min-width: 480px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 3.5rem;
+  }
+}
 
 h3 {
   font-family: "Questrial";
   font-size: 2rem;
   color: #F1E7E7;
   line-height: 1.2;
+}
+@media (min-width: 320px) {
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  h3 {
+    font-size: 2rem;
+  }
 }
 
 p {
@@ -54,6 +84,21 @@ p {
 body {
   background-color: #F1E7E7;
   padding-top: 10rem;
+}
+@media (min-width: 320px) {
+  body {
+    padding-top: 5rem;
+  }
+}
+@media (min-width: 480px) {
+  body {
+    padding-top: 8rem;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+    padding-top: 10rem;
+  }
 }
 
 a {
@@ -69,6 +114,27 @@ a {
 }
 a:hover {
   color: #F1A2A2;
+}
+@media (min-width: 320px) {
+  a {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+}
+@media (min-width: 480px) {
+  a {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  a {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 1600px) {
+  a {
+    font-size: 1.5rem;
+  }
 }
 
 /* Boton de Iniciar Sesion */
@@ -174,6 +240,38 @@ footer .fila-superior {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.5rem;
 }
+@media (min-width: 320px) {
+  footer .fila-superior {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 768px) {
+  footer .fila-superior {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+@media (min-width: 1024px) {
+  footer .fila-superior {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 0rem;
+  }
+}
+@media (min-width: 1200px) {
+  footer .fila-superior {
+    gap: 1.5rem;
+  }
+}
+@media (min-width: 1600px) {
+  footer .fila-superior {
+    width: 80%;
+  }
+}
 footer .fila-superior .img-logoFooter {
   width: 9rem;
   height: 9rem;
@@ -193,12 +291,14 @@ footer .fila-superior .cta-redes {
 }
 footer .fila-superior .cta-redes .img-redes {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 footer .fila-superior .cta-redes .img-redes .img-logoRedes {
-  width: 3rem;
-  height: 3rem;
-  padding: 1rem;
+  width: 2.75rem;
+  height: 2.75rem;
+  padding: 0.5rem;
   background-color: #961316;
   box-shadow: 0 0 0 0.2rem #F1A2A2;
   border-radius: 1.75rem;
@@ -206,14 +306,15 @@ footer .fila-superior .cta-redes .img-redes .img-logoRedes {
 footer .fila-inferior {
   width: 70%;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column-reverse;
   gap: 0.5rem;
 }
 footer .fila-inferior .menu-footer ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  flex-wrap: wrap;
   list-style: none;
   gap: 1.5rem;
 }
@@ -230,8 +331,10 @@ footer .fila-inferior .menu-footer ul a:hover {
   color: #F1A2A2;
 }
 footer .fila-inferior .copy {
+  align-self: flex-start;
   color: #F1E7E7;
   opacity: 60%;
+  margin-top: 2rem;
 }
 
 .introduccion {
@@ -277,7 +380,7 @@ footer .fila-inferior .copy {
   margin-top: 1.5rem;
 }
 .contenido .cont-texto a {
-  margin-top: 2rem;
+  margin-top: 2.5rem;
 }
 .contenido .img-deco-index {
   display: block;
