--- a/Fuente/styles/sass/base/_typography.scss
+++ b/Fuente/styles/sass/base/_typography.scss
@@ -1,5 +1,6 @@
-// Importo las variables
+// Importo las variables y las media-querires
 @use '../utils/variables';
+@import '../utils/media_query';
 
 // Fuentes que voy a usar en mi proyecto web
 @font-face {
@@ -16,17 +17,18 @@
 $font-size: 2rem;
 $line-height: 1.6;
 
-body {
-    font-family: variables.$font-Secondary;
-    font-size: calc($font-size / 2);
-    line-height: $line-height;
-}
-
 h1 {
     font-family: variables.$font-Main;
     font-size: $font-size * 2.4;
     color: variables.$color-Neutro-Blanco;
     line-height: $line-height - 0.4;
+
+    @include media-queries(small) {
+        font-size: $font-size + 1.8;
+    }
+    @include media-queries(tablet) {
+        font-size: $font-size + 2.8;
+    }
 }
 
 h2 {
@@ -35,6 +37,17 @@ h2 {
     font-style: italic;
     color: variables.$color-Secundario;
     line-height: $line-height - 0.4;
+
+    @include media-queries(small) {
+        text-align: center;
+        font-size: $font-size;
+    }
+    @include media-queries(medium) {
+        font-size: $font-size + 0.5;
+    }
+    @include media-queries(laptop) {
+        font-size: $font-size + 1.5;
+    }
 }
 
 h3 {
@@ -42,7 +55,15 @@ h3 {
     font-size: $font-size;
     color: variables.$color-Neutro-Blanco;
     line-height: $line-height - 0.4;
+
+    @include media-queries(small) {
+        font-size: $font-size - 0.5;
+    }
+    @include media-queries(tablet) {
+        font-size: $font-size;
+    }
 }
+
 p {
     font-family: variables.$font-Secondary;
     font-size: $font-size - 0.75;
