--- a/Fuente/styles/sass/layout/_section.scss
+++ b/Fuente/styles/sass/layout/_section.scss
@@ -1,4 +1,4 @@
-// Importo las Variables y las funciones map de sass
+// Importo las Variables 
 @use '../utils/variables';
 
 // Estilo de la parte de la cabecera del main
