--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -1,4 +1,4 @@
-// Importo las Variables y las funciones map de sass
+// Importo las Variables
 @use '../utils/variables';
 
 // Estilos para la pagina principal de la web (index.html)
