--- a/Fuente/styles/css/index.css
+++ b/Fuente/styles/css/index.css
@@ -21,16 +21,6 @@ h1 {
   color: #F1E7E7;
   line-height: 1.2;
 }
-@media (min-width: 320px) {
-  h1 {
-    font-size: 3.8rem;
-  }
-}
-@media (min-width: 768px) {
-  h1 {
-    font-size: 4.8rem;
-  }
-}
 
 h2 {
   font-family: "Lato";
@@ -39,38 +29,12 @@ h2 {
   color: #B03B3B;
   line-height: 1.2;
 }
-@media (min-width: 320px) {
-  h2 {
-    text-align: center;
-    font-size: 2rem;
-  }
-}
-@media (min-width: 480px) {
-  h2 {
-    font-size: 2.5rem;
-  }
-}
-@media (min-width: 1024px) {
-  h2 {
-    font-size: 3.5rem;
-  }
-}
 
 h3 {
   font-family: "Questrial";
   font-size: 2rem;
   color: #F1E7E7;
   line-height: 1.2;
-}
-@media (min-width: 320px) {
-  h3 {
-    font-size: 1.5rem;
-  }
-}
-@media (min-width: 768px) {
-  h3 {
-    font-size: 2rem;
-  }
 }
 
 p {
@@ -84,21 +48,6 @@ p {
 body {
   background-color: #F1E7E7;
   padding-top: 10rem;
-}
-@media (min-width: 320px) {
-  body {
-    padding-top: 5rem;
-  }
-}
-@media (min-width: 480px) {
-  body {
-    padding-top: 8rem;
-  }
-}
-@media (min-width: 1200px) {
-  body {
-    padding-top: 10rem;
-  }
 }
 
 a {
@@ -114,27 +63,6 @@ a {
 }
 a:hover {
   color: #F1A2A2;
-}
-@media (min-width: 320px) {
-  a {
-    font-size: 1rem;
-    padding: 0.5rem;
-  }
-}
-@media (min-width: 480px) {
-  a {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) {
-  a {
-    font-size: 1.25rem;
-  }
-}
-@media (min-width: 1600px) {
-  a {
-    font-size: 1.5rem;
-  }
 }
 
 /* Boton de Iniciar Sesion */
@@ -238,39 +166,8 @@ footer .fila-superior {
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
   gap: 1.5rem;
-}
-@media (min-width: 320px) {
-  footer .fila-superior {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media (min-width: 768px) {
-  footer .fila-superior {
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-@media (min-width: 1024px) {
-  footer .fila-superior {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    gap: 0rem;
-  }
-}
-@media (min-width: 1200px) {
-  footer .fila-superior {
-    gap: 1.5rem;
-  }
-}
-@media (min-width: 1600px) {
-  footer .fila-superior {
-    width: 80%;
-  }
 }
 footer .fila-superior .img-logoFooter {
   width: 9rem;
@@ -325,7 +222,6 @@ footer .fila-inferior .menu-footer ul a {
   text-align: center;
   color: #F1E7E7;
   display: inline-block;
-  padding: 0;
 }
 footer .fila-inferior .menu-footer ul a:hover {
   color: #F1A2A2;
@@ -457,106 +353,245 @@ footer .fila-inferior .copy {
   z-index: 10;
 }
 
-.img-header-pred {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  z-index: 0;
-  filter: brightness(0.75) contrast(120%) saturate(110%) sepia(25%);
-}
-
 @media (min-width: 320px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-320px.webp");
+  body {
+    padding-top: 5rem;
+  }
+  a {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+  h1 {
+    font-size: 3.8rem;
+  }
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+  header {
+    position: absolute;
+    min-height: 5rem;
+  }
+  .img-logoHeader {
+    width: 4rem;
+    height: 4rem;
+    margin: 0;
+  }
+  a .img-logoHeader:hover {
+    width: 3.75rem;
+    height: 3.75rem;
+    margin: 0;
+  }
+  .menu {
+    height: 5rem;
+  }
+  .enlaces {
+    display: none;
+  }
+  .separado {
+    margin-right: 0.5rem;
+  }
+  .intro-botones {
+    width: 90%;
+  }
+  .contenido {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .contenido h2 {
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+  .cont-texto {
+    margin-top: 0.5rem;
+  }
+  .cont-texto a {
+    margin-top: 2rem;
+  }
+  .anuncio-texto {
+    font-size: 1.25rem;
+  }
+  .redes-img {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .img-Instagram {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .fila-superior {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+  .fila-inferior {
+    width: 90%;
+  }
+  .copy {
+    font-size: 0.55rem;
   }
 }
-@media (min-width: 640px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-640px.webp");
+@media (min-width: 480px) {
+  body {
+    padding-top: 8rem;
+  }
+  a {
+    padding: 1rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  header {
+    min-height: 8rem;
+  }
+  .img-logoHeader {
+    width: 7rem;
+    height: 7rem;
+  }
+  a .img-logoHeader:hover {
+    width: 6.75rem;
+    height: 6.75rem;
+  }
+  .menu {
+    height: 8rem;
+  }
+  .img-deco-index-redes {
+    aspect-ratio: 16/9;
+  }
+  .copy {
+    font-size: 0.75rem;
   }
 }
-@media (min-width: 960px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-960px.webp");
+@media (min-width: 768px) {
+  a {
+    font-size: 1.25rem;
+  }
+  h1 {
+    font-size: 4.8rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  .img-Instagram {
+    width: 2rem;
+    height: 2rem;
+  }
+  .fila-superior {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .copy {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 3.5rem;
+  }
+  .fila-superior {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 0rem;
+  }
+  .img-logoRedes {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+  header {
+    position: fixed;
+  }
+  a .img-logoHeader:hover {
+    margin: 0.15rem;
+  }
+  .enlaces {
+    display: block;
+  }
+  .redes-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .img-deco-index-redes {
+    aspect-ratio: 1/1;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+    padding-top: 10rem;
+  }
+  header {
+    min-height: 10rem;
+  }
+  .img-logoHeader {
+    width: 9rem;
+    height: 9rem;
+    margin: 0.5rem 0 0.5rem 5rem;
+  }
+  a .img-logoHeader:hover {
+    width: 8.75rem;
+    height: 8.75rem;
+    margin-right: 0.25rem;
+  }
+  .menu {
+    height: 10rem;
+  }
+  .separado {
+    margin-right: 5rem;
+  }
+  .intro-botones {
+    width: 55%;
+  }
+  .contenido {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+  }
+  .contenido h2 {
+    text-align: left;
+    margin-bottom: 1.5rem;
+  }
+  .cont-texto {
+    margin-top: 1.5rem;
+  }
+  .cont-texto a {
+    margin-top: 2.5rem;
+  }
+  .anuncio-texto {
+    font-size: 1.5rem;
+  }
+  .fila-superior {
+    gap: 1.5rem;
+  }
+  .img-logoRedes {
+    width: 1.75rem;
+    height: 1.75rem;
+  }
+  .fila-inferior {
+    width: 70%;
+  }
+  .copy {
+    font-size: 1.25rem;
   }
 }
 @media (min-width: 1600px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-1600px.webp");
+  a {
+    font-size: 1.5rem;
   }
-}
-@media (min-width: 2240px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-2240px.webp");
+  .img-Instagram {
+    width: 3rem;
+    height: 3rem;
   }
-}
-@media (min-width: 3200px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/webp/hero-PaginaPrincipal-3200px.webp");
+  .fila-superior {
+    width: 80%;
   }
-}
-@media (min-width: 320px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-320px.jpg");
-  }
-}
-@media (min-width: 640px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-640px.jpg");
-  }
-}
-@media (min-width: 960px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-960px.jpg");
-  }
-}
-@media (min-width: 1600px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-1600px.jpg");
-  }
-}
-@media (min-width: 2240px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-2240px.jpg");
-  }
-}
-@media (min-width: 3200px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/jpg/hero-PaginaPrincipal-3200px.jpg");
-  }
-}
-@media (min-width: 320px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-320px.avif");
-  }
-}
-@media (min-width: 640px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-640px.avif");
-  }
-}
-@media (min-width: 960px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-960px.avif");
-  }
-}
-@media (min-width: 1600px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-1600px.avif");
-  }
-}
-@media (min-width: 2240px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-2240px.avif");
-  }
-}
-@media (min-width: 3200px) {
-  .img-index {
-    background-image: url("../../media/img/hero-image/avif/hero-PaginaPrincipal-3200px.avif");
+  .img-logoRedes {
+    width: 2.75rem;
+    height: 2.75rem;
   }
 }
 
